--- a/ms-commerce.yml
+++ b/ms-commerce.yml
@@ -37,6 +37,10 @@ eureka:
       defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
   instance:
     preferIpAddress: false
-    # For local development. Set to false if you want to use the hostname in a DNS-enabled environment
     hostname: ${HOSTNAME:localhost}
+    non-secure-port-enabled: true
+    secure-port-enabled: false
+    non-secure-port: ${server.port}
+    secure-port: 443
+    
 
